# chat

./: Cargo.toml
.cargo/: config.toml
examples/: client.rs  server.rs
src/: client.rs  db.rs  handle.rs  lib.rs  logger.rs  message.rs  server.rs  stream.rs
src/serialization/: byte_vec.rs  mod.rs  never.rs  option.rs  result.rs  string.rs  unit.rs
